--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently \"nodemon server.js\" \"cd ./client  && npm start \" ",
+    "dev": "concurrently \"nodemon server.js\" \"npm start \" ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd client && npm install && npm run build"
+    "postinstall": "npm install && npm run build"
   },
    "engines": {
     "node": "11.1.0"
