--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "node server.js",
     "dev": "concurrently \"nodemon server.js\" \"npm start \" ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install && npm run build"
+    "postinstall": "npm run postinstall && npm run build"
   },
    "engines": {
     "node": "11.1.0"
