--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@types/prop-types": "^15.5.6",
     "axios": "^0.18.0",
     "beaufort-scale": "^1.0.3",
-    "eslint": "^4.19.1",
+    "concurrently": "^4.0.1",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -24,11 +25,12 @@
     "yarn": "^1.12.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "concurrently \"nodemon server.js\" \"npm start \" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
-   "engines": {
+  "engines": {
     "node": "11.1.0"
   },
   "eslintConfig": {
